# snakeware

./: README.md  pyproject.toml
snakeware/: __init__.py  errors.py  message_identifiers.py  messages.py  response_statuses.py
