[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakeware"
version = "0.1.0"
description = "A library for interfacing with Thinkware dashcams."
readme = "README.md"
requires-python = ">=3.10"                                         # because of PEP 604
# Currently these two license fields cause errors.
# license = "GPL-3.0-only"
# license-files = ["LICENSE.txt"]
keywords = ["thinkware", "dashcam"]
maintainers = [{ name = "Kalcifer" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
[project.urls]
source = "https://codeberg.org/Kalcifer/snakeware"
issues = "https://codeberg.org/Kalcifer/snakeware/issues"
